<?xml version="1.0"?>
<package>
  <name>pal_emergency_stop</name>
  <version>0.1.0</version>
  <description>Implements policies to stop the mobile base</description>
  <maintainer email="Fernandez@todo.todo">Enrique Fernandez</maintainer>
  <maintainer email="Gevatter@todo.todo">Siegfried Gevatter</maintainer>
  <license>BSD</license>
  <author >Siegfried Gevatter</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
