<?xml version="1.0"?>
<package>
  <name>pal_navigation</name>
  <version>0.1.0</version>
  <description>PAL navigation metapackage</description>
  <maintainer email="paul.mathieu@pal-robotics.com">Paul Mathieu</maintainer>
  <license>BSD</license>
  <author email="paul.mathieu@pal-robotics.com">Paul Mathieu</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>pal_mobile_base</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
